--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,15 @@
 .hidden {
   display: none;
 }
+
+table {
+  width: 40%;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 15px;
+}
